--- a/LeetCode/1991-2000/1994. 好子集的数目（困难）.md
+++ b/LeetCode/1991-2000/1994. 好子集的数目（困难）.md
@@ -51,6 +51,8 @@ Tag : 「状压 DP」
 
 ### 状压 DP
 
+> 今天出了点状况，只能到公司后再写题解了 ...
+
 该问题属于 NP 完全问题，注定不存在多项式解决方案，只能通过「爆搜 + 剪枝」或「状压 DP」来求解。
 
 对子集的乘积进行质数分解，等价于对子集每一位数进行质数分解。
@@ -76,7 +78,7 @@ Tag : 「状压 DP」
 在此基础上，再考虑数值 $1$ 对答案的影响：**在每个合法的 $state'$ 前提下，增加若干个 $1$ 并不影响子集乘积（即好子集增加 $1$ 后仍为好子集），因此每个合法子集 $state'$ 可以对应出 $2^{cnts[1]}$ 个具体方案（代表每个 $1$ 即可以选，也可以不选）。**
 
 代码：
-```Java
+```Java []
 class Solution {
     int MOD = (int)1e9+7;
     int[] p = new int[]{2, 3, 5, 7, 11, 13, 17, 19, 23, 29};
@@ -92,17 +94,14 @@ class Solution {
             // 对 i 进行试除
             int cur = 0, x = i;
             boolean ok = true;
-            for (int j = 0; j < 10; j++) {
+            for (int j = 0; j < 10 && ok; j++) {
                 int t = p[j], c = 0;
                 while (x % t == 0) {
                     cur |= (1 << j);
                     x /= t; c++;
                 }
                 // 如果 i 能够被同一质数试除多次，说明 i 不能加到子集，跳过
-                if (c > 1) { 
-                    ok = false;
-                    break;
-                }
+                if (c > 1) ok = false;
             }
             if (!ok) continue;
             // 枚举前一状态 prev
@@ -124,6 +123,63 @@ class Solution {
 ```
 * 时间复杂度：预处理每个数值的出现次数复杂度为 $O(n)$；令数值范围 $C = 30$，状态数为 $M = 1024$，DP 部分复杂度为 $O(C * M)$。整体复杂度为 $O(n + C * M)$
 * 空间复杂度：$O(C + M)$
+
+---
+
+### 关于「倒序遍历」状态的答疑
+
+上述的分析推理基于我们进行了「一维空间优化」。
+
+原始的状态定义应该是 **$f[i][state]$ 为考虑范围在 $[1,30]$ 的前 $i$ 个数，并且好子集拆解结果的用到的质数为 $state$ 时的方案数。**
+
+我们有显然的初始化条件：$f[1][0] = 1$，代表当只有数值 $1$ 的话，只有空集为合法方案。
+
+不失一般性的考虑 $f[i][s]$ 该如何计算，根据使用数值 $i$ 来进行分情况讨论：
+
+* 不考虑数值 $i$（或是数值 $i$ 在 $nums$ 中没有出现，无法考虑），则有 $f[i][s] = f[i - 1][s]$；
+* 考虑数值 $i$，分析方法同「一维空间优化」，对数值 $i$ 应用「试除法」拆解成对应的质数状态 $cur$，然后找到可以转移的前一状态 $prev$ 来尝试转移，则有 $f[i][cur | prev] = f[i][cur | prev] + f[i - 1][prev]$。
+
+基于对「原始状态定义」的分析，我们发现 $f[i][cur | prev]$ 的更新（累加）依赖于 $f[i][prev]$，同时 $prev$ 是 $cur | prev$ 的子集，因此在进行「一维空间优化」，我们需要确保所依赖的状态没有被覆盖更新，即采用「倒序遍历」。
+
+代码：
+```Java []
+class Solution {
+    int MOD = (int)1e9+7;
+    int[] p = new int[]{2, 3, 5, 7, 11, 13, 17, 19, 23, 29};
+    int[] cnts = new int[35];
+    public int numberOfGoodSubsets(int[] nums) {
+        for (int i : nums) cnts[i]++;
+        int mask = 1 << 10;
+        long[][] f = new long[35][mask];
+        f[1][0] = 1;
+        for (int i = 2; i <= 30; i++) {
+            for (int s = 0; s < mask; s++) f[i][s] = f[i - 1][s];
+            if (cnts[i] == 0) continue;
+            int cur = 0, x = i;
+            boolean ok = true;
+            for (int j = 0; j < 10 && ok; j++) {
+                int t = p[j], c = 0;
+                while (x % t == 0) {
+                    cur |= (1 << j);
+                    x /= t; c++;
+                }
+                if (c > 1) ok = false;
+            }
+            if (!ok) continue;
+            for (int prev = 0; prev < mask; prev++) {
+                if ((prev & cur) != 0) continue;
+                f[i][prev | cur] = (f[i][prev | cur] + f[i - 1][prev] * cnts[i]) % MOD;
+            }
+        }
+        long ans = 0;
+        for (int i = 1; i < mask; i++) ans = (ans + f[30][i]) % MOD;
+        for (int i = 0; i < cnts[1]; i++) ans = ans * 2 % MOD;
+        return (int) ans;
+    }
+}
+```
+* 时间复杂度：预处理每个数值的出现次数复杂度为 $O(n)$；令数值范围 $C = 30$，状态数为 $M = 1024$，DP 部分复杂度为 $O(C * M)$。整体复杂度为 $O(n + C * M)$
+* 空间复杂度：$O(C * M)$
 
 ---
 
