--- a/LeetCode/1-10/6. Z 字形变换（中等）.md
+++ b/LeetCode/1-10/6. Z 字形变换（中等）.md
@@ -1,15 +1,14 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[6. Z 字形变换](https://leetcode-cn.com/problems/zigzag-conversion/solution/shua-chuan-lc-zhi-guan-gui-lu-jie-fa-shu-8226/)** ，难度为 **中等**。
+这是 LeetCode 上的 **[6. Z 字形变换](https://leetcode-cn.com/problems/zigzag-conversion/solution/gong-shui-san-xie-yi-ti-shuang-jie-mo-ni-naz6/)** ，难度为 **中等**。
 
 Tag : 「模拟」、「数学」
 
 
 
+将一个给定字符串 `s` 根据给定的行数 `numRows` ，以从上往下、从左到右进行 `Z` 字形排列。
 
-将一个给定字符串 s 根据给定的行数 numRows ，以从上往下、从左到右进行 Z 字形排列。
-
-比如输入字符串为 "PAYPALISHIRING" 行数为 3 时，排列如下：
+比如输入字符串为 `"PAYPALISHIRING"` 行数为 $3$ 时，排列如下：
 ```
 P   A   H   N
 A P L S I I G
@@ -22,12 +21,15 @@ Y   I   R
 示例 1：
 ```
 输入：s = "PAYPALISHIRING", numRows = 3
+
 输出："PAHNAPLSIIGYIR"
 ```
 示例 2：
 ```
 输入：s = "PAYPALISHIRING", numRows = 4
+
 输出："PINALSIGYAHRPI"
+
 解释：
 P     I    N
 A   L S  I G
@@ -37,96 +39,86 @@ P     I
 示例 3：
 ```
 输入：s = "A", numRows = 1
+
 输出："A"
 ```
 
 提示：
-* 1 <= s.length <= 1000
-* s 由英文字母（小写和大写）、',' 和 '.' 组成
-* 1 <= numRows <= 1000
-
+* $1 <= s.length <= 1000$
+* `s` 由英文字母（小写和大写）、`','` 和 `'.'` 组成
+* $1 <= numRows <= 1000$
 
 ---
-### 直观规律解法
 
-本题可以当成模拟题来做。
+### 模拟
 
-对需要打印的行 `i` 进行遍历，每一行的第一个字符可以直接确定：原字符开头的第 `i` 个字符。
+由于最终是要我们对 `Z` 型矩阵进行从上往下、从左往右的构建输出。
 
-然后计算出每行下一个字符的偏移量，这里需要分情况讨论：
+因此可以构建一个矩阵 `g` 存储 `Z` 型中的每行字符（忽略 `Z` 中的空格间隙），同时使用 `idxs` 存储 `Z` 型中每行用到的下标。
 
-* 对于第一行和最后一行：偏移量固定，不随着 `Z` 的方向改变
-
-* 对于其他行：偏移量随着 `Z` 的方向发生变化
+目标 `Z` 型 和 矩阵 `g` 以及 `idxs` 三者关系：
+```
+P     I    N             PIN                3
+A   L S  I G    =>       ALSIG     =>       5
+Y A   H R                YAHR               4
+P     I                  PI                 2   
+```
 
 代码：
-```Java []
+```Java
 class Solution {
-    public String convert(String s, int r) {
+    static int N = 1010;
+    static char[][] g = new char[N][N];
+    static int[] idxs = new int[N];
+    public String convert(String s, int m) {
+        if (m == 1) return s;
         int n = s.length();
-        if (n == 1 || r == 1) return s;
-
+        Arrays.fill(idxs, 0);
+        for (int i = 0, j = 0, k = 1; i < n; i++) {
+            g[j][idxs[j]++] = s.charAt(i);
+            j += k;
+            if (j < 0) {
+                j += 2; k = 1;
+            } else if (j == m) {
+                j -= 2; k = -1;
+            }
+        }
         StringBuilder sb = new StringBuilder();
-        for (int i = 0; i < r; i++) {
-            if (i == 0 || i == r - 1) {
-                int j = i;
-                int rowOffset = (r - 1) * 2 - 1;
-                while (j < n) {
-                    sb.append(s.charAt(j));
-                    j += rowOffset + 1;
-                }
-            } else {
-                int j = i;
-
-                int topRow = i;
-                int topOffset = topRow * 2 - 1;
-
-                int bottomRow = r - i - 1;
-                int bottomOffset = bottomRow * 2 - 1;
-
-                boolean flag = true;
-                while (j < n) {
-                    sb.append(s.charAt(j));
-                    j += flag ? bottomOffset + 1 : topOffset + 1;
-                    flag = !flag;
-                }
+        for (int i = 0; i < m; i++) {
+            for (int j = 0; j < idxs[i]; j++) {
+                sb.append(g[i][j]);
             }
         }
         return sb.toString();
     }
 }
 ```
-* 时间复杂度：分别对 `s` 中的每个字符进行打印。复杂度为 $O(n)$
-* 空间复杂度：$O(1)$
-
+* 时间复杂度：创建数组的工作只会发生一次，清空 `idxs` 数组操作会发生在每个样例中，复杂度为 $O(m)$；将 `s` 的每个字符填入矩阵的复杂度为 $O(n)$；从矩阵中取出字符构建答案复杂度为 $O(n)$。整体复杂度为 $O(m + n)$
+* 空间复杂度：$O(n * m)$
 
 ---
-#### 数学规律解法
 
-在平时的练习中，对于这种找规律的题，当我们使用直观的思路推理出一个解法之后，可以尝试从数学的角度上去分析。
+### 数学规律
 
-例如本题，我们可以不失一般性的将规律推导为「首项」和「公差公式」。
+对于本题，我们可以不失一般性的将规律推导为「首项」和「公差公式」。
 
 这通常能够有效减少一些判断。
 
 分情况讨论：
 
 * 对于第一行和最后一行：公差为 `2 * (n − 1)` 的等差数列，首项是 `i` 
-
 * 对于其他行：两个公差为 `2 * (n − 1)` 的等差数列交替排列，首项分别是 `i` 和 `2 * n − i − 2`
 
 代码：
-```Java []
+```Java
 class Solution {
     public String convert(String s, int r) {
         int n = s.length();
         if (n == 1 || r == 1) return s;
-
         StringBuilder sb = new StringBuilder();
         for (int i = 0; i < r; i++) {
             if (i == 0 || i == r - 1) {
-                int pos = i;
-                int offset = 2 * (r - 1);
+                int pos = i, offset = 2 * (r - 1);
                 while (pos < n) {
                     sb.append(s.charAt(pos));
                     pos += offset;
@@ -150,19 +142,11 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：分别对 `s` 中的每个字符进行打印。复杂度为 $O(n)$
+* 时间复杂度：$O(n)$
 * 空间复杂度：$O(1)$
 
 ---
-### 总结
 
-这种”找规律“的模拟题，和小学奥数题十分类似。要提高自己的做题水平，需要坚持两个方向：
-
-1. 自己多在纸上画图找规律，这种题没有什么通用解法
-
-2. 多做题，尽量对每种”规律“都有所接触
-
----
 ### 最后
 
 这是我们「刷穿 LeetCode」系列文章的第 `No.6` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
