--- a/LeetCode/561-570/564. 寻找最近的回文数（困难）.md
+++ b/LeetCode/561-570/564. 寻找最近的回文数（困难）.md
@@ -45,7 +45,7 @@ Tag : 「贪心」、「脑筋急转弯」
 
 例如对于 $abcde$ 来说，最近的回文数值的前三位可能是 $abc$、$abc+1$ 和 $abc-1$ 三者之一，其他位置的数值随着前三位的确定而唯一确定。
 
-上述分析对于一般情况成立，而边界情况是指 $abc + 1$ 和 $abc - 1$ 导致整体长度发生变化，即 $abc=999$ 和 $abc=100$ 的情况，此时直接套用上述方法得到的值分别为 $1000001$ 和 $999$，但真实最近比其大的值为 $100001$ 和 $9999$，因此对于长度为 $n$ 的数值，值考虑枚举前一半数的三种情况（前一半数不变，前一半数加一或减一）可能会过错最优解，我们需要将与长度相关的边界值也纳入考虑，即将「长度为 $n - 1$ 的回文串最大值（$99...99$）」和「长度为 $n + 1$ 的回文串最小值（$10...01$）」也纳入考虑，也就是对应的 $10^{n - 1} - 1$ 和 $10^n + 1$ 也纳入考虑。然后从上述 $5$ 个值中选绝对差值最小的作为答案。
+上述分析对于一般情况成立，而边界情况是指 $abc + 1$ 和 $abc - 1$ 导致整体长度发生变化，即 $abc=999$ 和 $abc=100$ 的情况，此时直接套用上述方法得到的值分别为 $1000001$ 和 $999$，但真实最近的值为 $100001$ 和 $9999$，因此对于长度为 $n$ 的数值，值考虑枚举前一半数的三种情况（前一半数不变，前一半数加一或减一）可能会过错最优解，我们需要将与长度相关的边界值也纳入考虑，即将「长度为 $n - 1$ 的回文串最大值（$99...99$）」和「长度为 $n + 1$ 的回文串最小值（$10...01$）」也纳入考虑，也就是对应的 $10^{n - 1} - 1$ 和 $10^n + 1$ 也纳入考虑。然后从上述 $5$ 个值中选绝对差值最小的作为答案。
 
 > 一些细节：在枚举完前一半数后，我们需要根据原串长度的奇偶性来决定，如何生成后一半数，从而确保构建的回文串长度仍和原串长度相等。
 即对于原串长度 $n$ 为奇数的 $abcde$ 而言，在处理完 $abc$ 之后，生成后一半数时，只需要根据前两位 $ab$ 生成对应的 $ba$，而无须处理中间字符 $c$；而对于原串长度 $n$ 为偶数的 $abcd$ 而言，在处理完 $ab$ 之后，生成另外一般数值需要根据整一个 $ab$ 来生成 $ba$，没有中间字符需要被跳过。
