--- a/LeetCode/561-570/564. 寻找最近的回文数（困难）.md
+++ b/LeetCode/561-570/564. 寻找最近的回文数（困难）.md
@@ -85,7 +85,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(\log{n})$
+* 时间复杂度：令 $N$ 为字符串 `s` 所代指的数值，$n$ 为字符串 `s` 的长度，复杂度为 $O(\log{N})$ 或者说是 $O(n)$
 * 空间复杂度：$O(1)$
 
 ---
