--- a/LeetCode/561-570/564. 寻找最近的回文数（困难）.md
+++ b/LeetCode/561-570/564. 寻找最近的回文数（困难）.md
@@ -49,10 +49,12 @@ Tag : 「贪心」、「脑筋急转弯」
 
 > 展开来说就是：对于 $abc = 999$（对应原串为 $999xx$ 的情况）而言，按照上述逻辑得到的是 $1000$，进行回文补充后得到 $1000001$（事实上应该是 $100001$ 更优）；对于 $abc = 100$（对应原串为 $100xx$ 的情况）而言，按照上述逻辑得到是 $99$，进行回文补充后得到 $999$（事实上应该是 $9999$ 更优）。
 
-因此对于长度为 $n$ 的数值，值考虑枚举前一半数的三种情况（前一半数不变，前一半数加一或减一）可能会过错最优解，我们需要将与长度相关的边界值也纳入考虑，即将「长度为 $n - 1$ 的回文串最大值（$99...99$）」和「长度为 $n + 1$ 的回文串最小值（$10...01$）」也纳入考虑，也就是对应的 $10^{n - 1} - 1$ 和 $10^n + 1$ 也纳入考虑。然后从上述 $5$ 个值中选绝对差值最小的作为答案。
+因此对于长度为 $n$ 的数值，值考虑枚举前一半数的三种情况（前一半数不变，前一半数加一或减一）可能会错过最优解，我们需要将与长度相关的边界值也纳入考虑，即将「长度为 $n - 1$ 的回文串最大值（$99...99$）」和「长度为 $n + 1$ 的回文串最小值（$10...01$）」也纳入考虑，也就是对应的 $10^{n - 1} - 1$ 和 $10^n + 1$ 也纳入考虑，最后从上述 $5$ 个值中选绝对差值最小的作为答案。
 
 > 一些细节：在枚举完前一半数后，我们需要根据原串长度的奇偶性来决定，如何生成后一半数，从而确保构建的回文串长度仍和原串长度相等。
-即对于原串长度 $n$ 为奇数的 $abcde$ 而言，在处理完 $abc$ 之后，生成后一半数时，只需要根据前两位 $ab$ 生成对应的 $ba$，而无须处理中间字符 $c$；而对于原串长度 $n$ 为偶数的 $abcd$ 而言，在处理完 $ab$ 之后，生成另外一般数值需要根据整一个 $ab$ 来生成 $ba$，没有中间字符需要被跳过。
+> 即对于原串长度 $n$ 为奇数的 $abcde$ 而言，在处理完 $abc$ 之后，生成后一半数时，只需要根据前两位 $ab$ 生成对应的 $ba$，而无须处理中间字符 $c$；而对于原串长度 $n$ 为偶数的 $abcd$ 而言，在处理完 $ab$ 之后，生成另外一般数值需要根据整一个 $ab$ 来生成 $ba$，没有中间字符需要被跳过。
+>
+> 另外由于数据范围为 $[1, 10^{18} - 1]$，而 $999999999999999999$ 也属于合法输入（$2022/03/03$ 目前样例里还没有这个数据），因此我们需要考虑 `getNum` 爆 `long` 的问题，一个比直接特判更好做法是：利用答案长度必然不会超过 $19$ 来做处理，对于长度超过 $19$ 的直接当成 $-1$ 来处理，由于个位数均为回文，$-1$ 注定不会成为答案。
 
 代码：
 ```Java
@@ -81,7 +83,8 @@ class Solution {
         sb.append(k);
         int n = sb.length(), idx = isEven ? n - 1 : n - 2;
         while (idx >= 0) sb.append(sb.charAt(idx--));
-        return Long.parseLong(sb.toString());
+        String str = sb.toString();
+        return str.length() > 19 ? -1 : Long.parseLong(str);
     }
 }
 ```
