--- a/LeetCode/2101-2110/2104. 子数组范围和（中等）.md
+++ b/LeetCode/2101-2110/2104. 子数组范围和（中等）.md
@@ -146,8 +146,10 @@ class Solution {
 
 考虑如何统计每个 $nums[i]$ 成为区间最值的次数：
 
-1. $nums[i]$ 作为区间最大值的次数：找到 $nums[i]$ 左右最近一个不满足「小于等于 $nums[i]$」的位置，记其为 $p$ 和 $q$。此时区间左端点共有 $i - p$ 个选择，区间右端点共有 $q - i$ 个选择，根据乘法原理，区间个数为 $(i - p) * (q - i)$ 个；
-2. $nums[i]$ 作为区间最小值的次数：同理，找到 $nums[i]$ 左右最近一个不满足「大于等于 $nums[i]$」的位置，记其为 $p$ 和 $q$，区间个数为 $(i - p) * (q - i)$ 个。
+* $nums[i]$ 作为区间最大值的次数：找到 $nums[i]$ 左右最近一个不满足「小于等于 $nums[i]$」的位置，记其为 $p$ 和 $q$。此时区间左端点共有 $i - p$ 个选择，区间右端点共有 $q - i$ 个选择，根据乘法原理，区间个数为 $(i - p) * (q - i)$ 个；
+* $nums[i]$ 作为区间最小值的次数：同理，找到 $nums[i]$ 左右最近一个不满足「大于等于 $nums[i]$」的位置，记其为 $p$ 和 $q$，区间个数为 $(i - p) * (q - i)$ 个。
+
+即问题切换为：**使用「单调栈」找到某个 $nums[i]$ 的左边/右边的最近一个符合某种性质的位置，从而知道 $nums[i]$ 作为区间最值时，左右端点的可选择个数，再结合乘法原理知道 $nums[i]$ 能够作为区间最值的区间个数，从而知道 $nums[i]$ 对答案的贡献。**
 
 值得注意的是，由于 $nums[i]$ 存在相同元素，因此上述两边均取等号的做法会导致某些区间被重复计算，因此我们可以令最近右端点的部分不取等号，确保区间统计不重不漏。
 
@@ -157,6 +159,7 @@ class Solution {
     int n;
     public long subArrayRanges(int[] nums) {
         n = nums.length;
+        // min[i] 为 nums[i] 作为区间最小值的次数；max[i] 为 nums[i] 作为区间最大值的次数
         long[] min = getCnt(nums, true), max = getCnt(nums, false);
         long ans = 0;
         for (int i = 0; i < n; i++) ans += (max[i] - min[i]) * nums[i];
