--- a/LeetCode/521-530/528. 按权重随机选择（中等）.md
+++ b/LeetCode/521-530/528. 按权重随机选择（中等）.md
@@ -6,11 +6,11 @@ Tag : 「前缀和」、「二分」、「模拟」
 
 
 
-给定一个正整数数组 w ，其中 w[i] 代表下标 i 的权重（下标从 0 开始），请写一个函数 pickIndex ，它可以随机地获取下标 i，选取下标 i 的概率与 w[i] 成正比。
+给定一个正整数数组 $w$ ，其中 $w[i]$ 代表下标 $i$ 的权重（下标从 $0$ 开始），请写一个函数 `pickIndex` ，它可以随机地获取下标 $i$，选取下标 $i$ 的概率与 $w[i]$ 成正比。
 
-例如，对于 w = [1, 3]，挑选下标 0 的概率为 1 / (1 + 3) = 0.25 （即，25%），而选取下标 1 的概率为 3 / (1 + 3) = 0.75（即，75%）。
+例如，对于 $w = [1, 3]$，挑选下标 $0$ 的概率为 $1 / (1 + 3) = 0.25$ （即，$25$%），而选取下标 $1$ 的概率为 $3 / (1 + 3) = 0.75$（即，$75$%）。
 
-也就是说，选取下标 i 的概率为 w[i] / sum(w) 。 
+也就是说，选取下标 $i$ 的概率为 $w[i] / sum(w)$ 。 
 
 示例 1：
 ```
@@ -53,9 +53,9 @@ solution.pickIndex(); // 返回 0，返回下标 0，返回该下标概率为 1/
 ```
 
 提示：
-* 1 <= w.length <= 10000
-* 1 <= w[i] <= $10^5$
-* pickIndex 将被调用不超过 10000 次
+* $1 <= w.length <= 10000$
+* $1 <= w[i] <= 10^5$
+* `pickIndex` 将被调用不超过 $10000$ 次
 
 ---
 
