--- a/LeetCode/2051-2060/2055. 蜡烛之间的盘子（中等）.md
+++ b/LeetCode/2051-2060/2055. 蜡烛之间的盘子（中等）.md
@@ -95,7 +95,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：令 `s` 的长度为 $n$，`qs` 长度为 $m$。统计所有的蜡烛并存入 `list` 的复杂度为 $O(n)$；预处理前缀和数组复杂度为 $O(n)$；处理单个询问需要进行两次二分（蜡烛数量最多为 $n$），复杂度为 $O(n\log{n})$，共有 $m$ 个询问需要处理，复杂度为 $O(m * \log{n})$。整体复杂度为 $O(n + m\log{n})$
+* 时间复杂度：令 `s` 的长度为 $n$，`qs` 长度为 $m$。统计所有的蜡烛并存入 `list` 的复杂度为 $O(n)$；预处理前缀和数组复杂度为 $O(n)$；处理单个询问需要进行两次二分（蜡烛数量最多为 $n$），复杂度为 $O(\log{n})$，共有 $m$ 个询问需要处理，复杂度为 $O(m * \log{n})$。整体复杂度为 $O(n + m\log{n})$
 * 空间复杂度：$O(n)$
 
 ---
