--- a/LeetCode/1101-1110/1109. 航班预订统计（中等）.md
+++ b/LeetCode/1101-1110/1109. 航班预订统计（中等）.md
@@ -6,11 +6,11 @@ Tag : 「区间求和问题」、「差分」、「线段树」
 
 
 
-这里有 `n` 个航班，它们分别从 `1` 到 `n` 进行编号。
+这里有 $n$ 个航班，它们分别从 $1$ 到 $n$ 进行编号。
 
-有一份航班预订表 `bookings`，表中第 `i` 条预订记录 $bookings[i] = [first_i, last_i, seats_i]$ 意味着在从 $first_i$ 到 $last_i$ （包含 $first_i$ 和 $last_i$ ）的 每个航班 上预订了 $seats_i$ 个座位。
+有一份航班预订表 `bookings`，表中第 $i$ 条预订记录 $bookings[i] = [first_i, last_i, seats_i]$ 意味着在从 $first_i$ 到 $last_i$ （包含 $first_i$ 和 $last_i$ ）的 每个航班 上预订了 $seats_i$ 个座位。
 
-请你返回一个长度为 `n` 的数组 `answer`，其中 `answer[i]` 是航班 `i` 上预订的座位总数。
+请你返回一个长度为 $n$ 的数组 `answer`，其中 $answer[i]$ 是航班 $i$ 上预订的座位总数。
 
 示例 1：
 ```
@@ -40,11 +40,11 @@ Tag : 「区间求和问题」、「差分」、「线段树」
 因此，answer = [10,25]
 ```
 提示：
-* 1 <= n <= $2 * 10^4$
-* 1 <= bookings.length <= $2 * 10^4$
-* bookings[i].length == 3
-* 1 <= firsti <= lasti <= n
-* 1 <= seatsi <= $10^4$
+* $1 <= n <= 2 * 10^4$
+* $1 <= bookings.length <= 2 * 10^4$
+* $bookings[i].length == 3$
+* $1 <= first_i <= last_i <= n$
+* $1 <= seats_i <= 10^4$
 
 ---
 
