--- a/LeetCode/331-340/331. 验证二叉树的前序序列化（中等）.md
+++ b/LeetCode/331-340/331. 验证二叉树的前序序列化（中等）.md
@@ -4,9 +4,6 @@
 
 Tag : 「二叉树」
 
-
-
-
 序列化二叉树的一种方法是使用前序遍历。当我们遇到一个非空节点时，我们可以记录下这个节点的值。如果它是一个空节点，我们可以使用一个标记值记录，例如 #。
 ```
      _9_
@@ -63,11 +60,11 @@ Tag : 「二叉树」
 
 ### 证明 1（利用不等式）
 
-我们令非空节点数量为 m，空节点数量为 n，入度和出度仍然使用 in 和 out 代表。
+我们令非空节点数量为 $m$，空节点数量为 $n$，入度和出度仍然使用 $in$ 和 $out$ 代表。
 
-找一下 in 和 out 与 n 和 m 之间的关系。
+找一下 $in$ 和 $out$ 与 $n$ 和 $m$ 之间的关系。
 
-一颗合格二叉树 m 和 n 的最小的比例关系是 1 : 2，也就是对应了这么一个形状：
+一颗合格二叉树 $m$ 和 $n$ 的最小的比例关系是 $1 : 2$，也就是对应了这么一个形状：
 
 ```
  4 
@@ -75,13 +72,13 @@ Tag : 「二叉树」
 # #
 ```
 
-而遍历过程中 m 和 n 的最小的比例关系则是 1 : 0，**这其实对应了二叉树空节点总是跟在非空节点的后面这一性质。**
+而遍历过程中 $m$ 和 $n$ 的最小的比例关系则是 $1 : 0$，**这其实对应了二叉树空节点总是跟在非空节点的后面这一性质。**
 
 换句话说，在没到最后一个节点之前，我们是不会遇到 空节点数量 > 非空节点数量 的情况的。
 
-**非空节点数量 >= 空节点数量 在遍历没结束前恒成立：m>=n**
+**`非空节点数量 >= 空节点数量` 在遍历没结束前恒成立：$m>=n$**
 
-然后再结合「**每一个非空节点都对应了 2 个出度，空节点都对应了 0 个出度；除了根节点，每个节点都有一个入度**」特性。
+然后再结合「**每一个非空节点都对应了 $2$ 个出度，空节点都对应了 $0$ 个出度；除了根节点，每个节点都有一个入度**」特性。
 
 在遍历尚未结束前，我们有以下关系：
 
@@ -91,28 +88,26 @@ Tag : 「二叉树」
 
 简单的变形可得：
 
-* 由 2 变形可得：$m >= in + 1 - n$
-
-* 由 3 变形可得：$m >= out / 2$
+* 由 $2$ 变形可得：$m >= in + 1 - n$
+* 由 $3$ 变形可得：$m >= out / 2$
 
 即有：
 1. $m >= n$
 2. $m >= in + 1 - n$
 3. $m >= out / 2$
 
-再将 1 和 2 相加，抵消 `n`：$2m >= in + 1$
-
+再将 $1$ 和 $2$ 相加，抵消 $n$：$2m >= in + 1$
 1. $2m >= in + 1$ => $in <= 2m - 1$
-
 2. $m >= out / 2$ => $out <= 2m$
 
-因此，在遍历尚未完成时，`in` 和 `out` 始终满足上述关系（与空节点数量 `n` 无关）。
+因此，在遍历尚未完成时，$in$ 和 $out$ 始终满足上述关系（与空节点数量 $n$ 无关）。
 
 如果不从合格二叉树的前提（$m>=n$）出发，我们是无法得到上述关系式的。
 
-**因此，我们可以一边遍历一边统计「严格出度」和「严格入度」，然后写一个 check 函数去判定 `in` `out` `m` 三者关系是否符合要求，如果不符合则说明二叉树不合法。**
+**因此，我们可以一边遍历一边统计「严格出度」和「严格入度」，然后写一个 `check` 函数去判定 $in$、$out$ 和 $m$ 三者关系是否符合要求，如果不符合则说明二叉树不合法。**
 
-```java
+代码：
+```Java
 class Solution {
   public boolean isValidSerialization(String s) {
     String[] ss = s.split(",");
@@ -141,17 +136,17 @@ class Solution {
 
 ### 证明 2（利用技巧转换为等式）
 
-我们令非空节点数量为 `m`，空节点数量为 `n`，入度和出度仍然使用 `in` 和 `out` 代表。
+我们令非空节点数量为 $m$，空节点数量为 $n$，入度和出度仍然使用 $in$ 和 $out$ 代表。
 
-找一下 `in` 和 `out` 与 `n` 和 `m` 之间的关系。
+找一下 $in$ 和 $out$ 与 $n$ 和 $m$ 之间的关系。
 
-一颗合格二叉树 `m` 和 `n` 的最小的比例关系是 `1 : 2`，也就是对应了这么一个形状：
+一颗合格二叉树 $m$ 和 $n$ 的最小的比例关系是 $1 : 2$，也就是对应了这么一个形状：
 ```
  4 
 / \
 # #
 ```
-而遍历过程中 `m` 和 `n` 的最小的比例关系则是 `1 : 0`，这**其实对应了二叉树空节点总是跟在非空节点的后面这一性质。**
+而遍历过程中 $m$ 和 $n$ 的最小的比例关系则是 $1 : 0$，这**其实对应了二叉树空节点总是跟在非空节点的后面这一性质。**
 
 换句话说，在没到最后一个节点之前，我们是不会遇到 `空节点数量 > 非空节点数量` 的情况的。
 
@@ -165,14 +160,14 @@ class Solution {
 2. $in = m + n - 1$
 3. $out = 2 * m$
 
-从第 2 个等式出发，结合第 1 个等式：
+从第 $2$ 个等式出发，结合第 $1$ 个等式：
 
 $in = m + n - 1 <= m + m - 1 = 2m - 1 = out - 1$
 
-即可得 $in + 1 <= out$ ，也就是 `in < out` 恒成立。
+即可得 $in + 1 <= out$ ，也就是 $in < out$ 恒成立。
 
 代码：
-```java []
+```Java
 class Solution {
     public boolean isValidSerialization(String s) {
         String[] ss = s.split(",");
