--- a/LeetCode/2041-2050/2049. 统计最高分的节点数目（中等）.md
+++ b/LeetCode/2041-2050/2049. 统计最高分的节点数目（中等）.md
@@ -53,11 +53,13 @@ Tag : 「图论」、「线性 DP」
 
 ---
 
-### 建图 + DFS
+### 建图 + DFS + 统计答案
 
 为了更具有一般性，我们假定该树为多叉树。
 
 由于题目给定的 `parents` 数组仅支持我们快速查找某个节点的父节点，为了方便遍历整棵树，我们先使用「邻接表」将图（树）建起来。
+
+还不熟悉「邻接表」存图方式的同学可以看看前置 🧀 : [涵盖所有的「存图方式」模板](https%3A//mp.weixin.qq.com/s?__biz%3DMzU4NDE3MTEyMA%3D%3D%26mid%3D2247488007%26idx%3D1%26sn%3D9d0dcfdf475168d26a5a4bd6fcd3505d%26chksm%3Dfd9cb918caeb300e1c8844583db5c5318a89e60d8d552747ff8c2256910d32acd9013c93058f%26mpshare%3D1%26scene%3D23%26srcid%3D0311tjKy74JijYzXhHo8Qob7%26sharer_sharetime%3D1646964421353%26sharer_shareid%3D1221771780968b30ef07c3f22cd356ed%2523rd)。
 
 然后使用 `DFS` 预处理出 `f` 数组，其中 $f[i]$ 代表以节点 $i$ 为根节点的子树所包含的节点数量。
 
@@ -115,6 +117,61 @@ class Solution {
 }
 ```
 * 时间复杂度：建图复杂度为 $O(n)$；通过 `DFS` 预处理 `f` 数组复杂度为 $O(n + m)$，其中 $m$ 为边数，对于本题（二叉树）而言，点边数量级相等，因此 `DFS` 预处理的复杂度为 $O(n)$；模拟删除任意点并统计答案的复杂度为 $O(n + m)$，对于本题（二叉树）而言，数量级为 $O(n)$。整体复杂度为 $O(n)$
+* 空间复杂度：$O(n)$
+
+---
+
+### 拓扑排序 + 统计答案
+
+通过对「待删除节点是否为根节点」的分情况讨论可知：若要算得删除某个节点后的得分，重点需要知道「当前节点的左右子树（如果有）所包含的节点数量」以及「当前节点的父节点所在连通块的节点数量」。
+
+我们解法 $1$ 的建图目的就是为了得到某个节点的子树情况，`DFS` 预处理 `f` 数组的目的就是知道以某个节点为根的子树所包含的总节点数量。
+
+而这个「建图 + `DFS`」过程可由「拓扑排序」所代替。
+
+具体的，我们可以先对 `parents`进行遍历， 统计所有节点的出度 $out[i]$，然后将所有出度为 $0$ 的节点（叶子节点）进行入队。跑一遍求拓扑排序的 `BFS`，每次某个节点 $t$ 出队，我们就对节点 $t$ 的父节点 $fa = parents[t]$ 进行出度减一操作（若出度减至 $0$，则将 $fa$ 进行入队，注意 $fa$ 不能为根节点，因为 $fa$ 入队没有意义，其入队不能更新其他点的出度），并在求拓扑序的过程中预处理出 `l` 和 `r` 数组，$l[i]$ 和 $r[i]$ 分别代表节点 $i$ 的左子树的节点数和右节点的节点数。
+
+跑完拓扑排序后，我们得到的 `l` 和 `r` 数组就足够我们统计答案，仍然是对删除节点 $x$ 是否为根节点的分情况讨论：
+
+* 若 $x$ 不是根节点，得分为 $\max(l[x], 1) \times \max( r[x], 1)$
+* 若 $x$ 为根节点，得分为 $\max(l[x], 1) \times \max( r[x], 1) \times (n - (l[x] + r[x] + 1)$
+
+代码：
+```Java
+class Solution {
+    public int countHighestScoreNodes(int[] parents) {
+        int n = parents.length;
+        int[] out = new int[n];
+        for (int i = 1; i < n; i++) out[parents[i]]++;
+        Deque<Integer> d = new ArrayDeque<>();
+        for (int i = 0; i < n; i++) {
+            if (out[i] == 0) d.addLast(i);
+        }
+        // l[i] 和 r[i] 分别代表节点 i 的左子树的节点数和右节点的节点数
+        int[] l = new int[n], r = new int[n];
+        while (!d.isEmpty()) {
+            int t = d.pollFirst(), fa = parents[t];
+            out[fa]--;
+            if (l[fa] == 0) l[fa] = l[t] + r[t] + 1;
+            else r[fa] = l[t] + r[t] + 1;
+            if (out[fa] == 0 && fa != 0) d.addLast(fa);
+        }
+        long max = 0;
+        int ans = 0;
+        for (int i = 0; i < n; i++) {
+            long cur = Math.max(l[i], 1) * Math.max(r[i], 1);
+            if (i != 0) cur *= n - (l[i] + r[i] + 1);
+            if (cur > max) {
+                max = cur; ans = 1;
+            } else if (cur == max) {
+                ans++;
+            }
+        }
+        return ans;
+    }
+}
+```
+* 时间复杂度：$O(n)$
 * 空间复杂度：$O(n)$
 
 ---
