--- a/LeetCode/581-590/590. N 叉树的后序遍历（简单）.md
+++ b/LeetCode/581-590/590. N 叉树的后序遍历（简单）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[590. N 叉树的后序遍历（简单）](https://leetcode-cn.com/problems/n-ary-tree-postorder-traversal/solution/by-ac_oier-ul7t/)** ，难度为 **简单**。
+这是 LeetCode 上的 **[590. N 叉树的后序遍历](https://leetcode-cn.com/problems/n-ary-tree-postorder-traversal/solution/by-ac_oier-ul7t/)** ，难度为 **简单**。
 
 Tag : 「递归」、「迭代」、「非递归」、「DFS」、「BFS」
 
