--- a/LeetCode/221-230/229. 求众数 II（中等）.md
+++ b/LeetCode/221-230/229. 求众数 II（中等）.md
@@ -2,9 +2,9 @@
 
 这是 LeetCode 上的 **[229. 求众数 II](https://leetcode-cn.com/problems/majority-element-ii/solution/gong-shui-san-xie-noxiang-xin-ke-xue-xi-ws0rj/)** ，难度为 **中等**。
 
-
-
 Tag : 「摩尔投票」、「哈希表」
+
+
 
 给定一个大小为 `n` 的整数数组，找出其中所有出现超过 `⌊ n/3 ⌋` 次的元素。
 
@@ -32,7 +32,7 @@ Tag : 「摩尔投票」、「哈希表」
 * $-10^9 <= nums[i] <= 10^9$
 
 
-进阶：尝试设计时间复杂度为 O(n)、空间复杂度为 O(1)的算法解决此问题。
+进阶：尝试设计时间复杂度为 $O(n)$、空间复杂度为 $O(1)$ 的算法解决此问题。
 
 ---
 
