--- a/LeetCode/441-450/447. 回旋镖的数量（中等）.md
+++ b/LeetCode/441-450/447. 回旋镖的数量（中等）.md
@@ -4,6 +4,8 @@
 
 Tag : 「哈希表」、「模拟」
 
+
+
 给定平面上 `n` 对 互不相同 的点 `points`，其中 `points[i] = [xi, yi]` 。回旋镖 是由点 `(i, j, k)` 表示的元组 ，其中 `i` 和 `j` 之间的距离和 `i` 和 `k` 之间的距离相等（需要考虑元组的顺序）。
 
 返回平面上所有回旋镖的数量。
@@ -31,10 +33,10 @@ Tag : 「哈希表」、「模拟」
 ```
 
 提示：
-* n == points.length
-* 1 <= n <= 500
-* points[i].length == 2
-* -$10^4$ <= xi, yi <= $10^4$
+* $n == points.length$
+* $1 <= n <= 500$
+* $points[i].length == 2$
+* -$10^4 <= x_i, y_i <= 10^4$
 * 所有点都 互不相同
 
 ---
