--- a/LeetCode/591-600/599. 两个列表的最小索引总和（简单）.md
+++ b/LeetCode/591-600/599. 两个列表的最小索引总和（简单）.md
@@ -48,7 +48,7 @@ Tag : 「哈希表」、「模拟」
 * 如果 $list2[i]$ 在哈希表中：
     * 索引之和等于 $min$，将 $list2[i]$ 加入 $ans$；
     * 索引之和小于 $min$，更新 $min$，清空 $ans$，将 $list2[i]$ 加入 $ans$；
-    * 索引自核大于 $min$，跳过。
+    * 索引之和大于 $min$，跳过。
 
 代码：
 ```Java
