--- a/LeetCode/591-600/599. 两个列表的最小索引总和（简单）.md
+++ b/LeetCode/591-600/599. 两个列表的最小索引总和（简单）.md
@@ -79,6 +79,32 @@ class Solution {
 
 ---
 
+### 答疑
+
+评论区有位同学提出了一个挺有意思的疑问，或许是部分同学的共同疑问，这里集中答疑一下。
+
+Q0: `for` 循环里的 `ans.clear()` 这个函数也是 $O(n)$ 复杂度吧，为什么合起来还是 $O(n)$ ?
+
+A0: 在 `ArrayList` 源码中的 `clear` 实现会为了消除容器对对象的强引用，遍历容器内的内容并置空来帮助 GC。
+
+但不代表这会导致复杂度上界变成 $n^2$。
+
+不会导致复杂度退化的核心原因是：**由于 `clear` 导致的循环计算量总共必然不会超过 $n$**。因为最多只有 $n$ 个元素在 `ans` 里面，且同一元素不会被删除多次（即每个元素对 `clear` 的贡献不会超过 $1$）。
+
+如果有同学还是觉得不好理解，可以考虑一种极端情况：`clear` 操作共发生 $n$ 次，但发生 $n$ 次的前提条件是每次 `ans` 中只有 $1$ 位元素，此时由 `clear` 操作带来的额外计算量为最大值 $n$。
+
+因此这里的 `clear` 操作对复杂度影响是「累加」，而不是「累乘」，即复杂度仍为 $O(n)$，而不是 $O(n^2)$。
+
+<br/>
+
+Q1: 判断 $list[i]$ 是否在哈希中的操作，复杂度是多少？
+
+A1: 在 Java 的 `HashMap` 实现中，当键值对中的键数据类型为 `String` 时，会先计算一次（之后使用缓存）该字符串的 `HashCode`，计算 `HashCode` 的过程需要遍历字符串，因此该操作是与字符串长度相关的（对于本题字符串长度不超过 $30$），然后根据 `HashCode`「近似」$O(1)$ 定位到哈希桶位置并进行插入/更新。
+
+因此在 Java 中，该操作与「当前的字符串长度」相关，而与「当前容器所包含元素多少」无关。
+
+---
+
 ### 最后
 
 这是我们「刷穿 LeetCode」系列文章的第 `No.599` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
