--- a/LeetCode/711-720/717. 1比特与2比特字符（简单）.md
+++ b/LeetCode/711-720/717. 1比特与2比特字符（简单）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[709. 转换成小写字母](https://leetcode-cn.com/problems/1-bit-and-2-bit-characters/solution/gong-shui-san-xie-jian-dan-mo-ni-ti-by-a-igh7/)** ，难度为 **简单**。
+这是 LeetCode 上的 **[717. 1比特与2比特字符](https://leetcode-cn.com/problems/1-bit-and-2-bit-characters/solution/gong-shui-san-xie-jian-dan-mo-ni-ti-by-a-igh7/)** ，难度为 **简单**。
 
 Tag : 「模拟」
 
@@ -60,7 +60,7 @@ class Solution {
 
 ### 最后
 
-这是我们「刷穿 LeetCode」系列文章的第 `No.709` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
+这是我们「刷穿 LeetCode」系列文章的第 `No.717` 篇，系列开始于 2021/01/01，截止于起始日 LeetCode 上共有 1916 道题目，部分是有锁题，我们将先把所有不带锁的题目刷完。
 
 在这个系列文章里面，除了讲解解题思路以外，还会尽可能给出最为简洁的代码。如果涉及通解还会相应的代码模板。
 
