✨feat: Add 720 & Modify 211、432

--- a/LeetCode/211-220/211. 添加与搜索单词 - 数据结构设计（中等）.md
+++ b/LeetCode/211-220/211. 添加与搜索单词 - 数据结构设计（中等）.md
@@ -6,11 +6,11 @@ Tag : 「DFS」、「字典树」
 
 请你设计一个数据结构，支持 添加新单词 和 查找字符串是否与任何先前添加的字符串匹配 。
 
-实现词典类 WordDictionary ：
-* WordDictionary() 初始化词典对象
-* void addWord(word) 将 word 添加到数据结构中，之后可以对它进行匹配
-* bool search(word) 如果数据结构中存在字符串与 word 匹配，则返回 true ；否则，返回  false 
-* word 中可能包含一些 '.' ，每个 . 都可以表示任何一个字母。
+实现词典类 `WordDictionary` ：
+* `WordDictionary()` 初始化词典对象
+* `void addWord(word)` 将 `word` 添加到数据结构中，之后可以对它进行匹配
+* `bool search(word)` 如果数据结构中存在字符串与 `word` 匹配，则返回 `true` ；否则，返回  `false` 
+* `word` 中可能包含一些 `'.'` ，每个 `.` 都可以表示任何一个字母。
 
 示例：
 ```
@@ -33,10 +33,10 @@ wordDictionary.search("b.."); // return True
 ```
 
 提示：
-* 1 <= word.length <= 500
-* addWord 中的 word 由小写英文字母组成
-* search 中的 word 由 '.' 或小写英文字母组成
-* 最多调用 50000 次 addWord 和 search
+* $1 <= word.length <= 500$
+* `addWord` 中的 `word` 由小写英文字母组成
+* `search` 中的 `word` 由 `'.'` 或小写英文字母组成
+* 最多调用 $50000$ 次 `addWord` 和 `search`
 
 ---
 
@@ -110,7 +110,7 @@ class WordDictionary {
     }
 }
 ```
- 
+
 ```Java
 class WordDictionary {
     int N = 250000;
