--- a/LeetCode/431-440/432. 全 O(1) 的数据结构（困难）.md
+++ b/LeetCode/431-440/432. 全 O(1) 的数据结构（困难）.md
@@ -53,9 +53,9 @@ allOne.getMinKey(); // 返回 "leet"
 
 **我们可以采取和 [实现一个 LRUCache](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247486820&idx=1&sn=2055864e10848bce55afc4e2feda79a7&chksm=fd9ca67bcaeb2f6d2038706e32cafffd701d3d6b71b60c52a568ed6dc0e268d93f8a78498105&token=146288031&lang=zh_CN#rd) & [实现一个 LFUCache](https://mp.weixin.qq.com/s?__biz=MzU4NDE3MTEyMA==&mid=2247486856&idx=1&sn=59b2ed57e4a75eac0e63fc0cf08bed5d&chksm=fd9ca697caeb2f81f83cdc741375f9130c3fa40463edb4ae98d702354ca106378fdfe23735ad&token=146288031&lang=zh_CN#rd) 类似的思路，通过自定义节点并手写双链表来实现。**
 
-定义一个节点类 `Node`，除了包含用于实现双向链表的 `left` 和 `right` 以外，还包含一个数值类型的变量 `val`， 用于记录该节点存储的是计数次数为多少的元素，以及一个 `Set` 类型的容器，用于支持 $O(1)$ 插入和删除元素，记作 `set`。
+定义一个节点类 `Node`，除了包含用于实现双向链表的 `left` 和 `right` 以外，还包含一个数值类型的变量 `cnt`， 用于记录该节点存储的是计数次数为多少的元素，以及一个 `Set` 类型的容器，用于支持 $O(1)$ 插入和删除元素，记作 `set`。
 
-同时为了快速知道某个字符串属于哪个 `Node`，我们还需要开一个「哈希表」进行定位（以字符串为哈希表的键，字符串所在 `Node` 作为值），当定位到字符串对应的 `Node` 之后则可以利用「双向链表」的 $O(1)$  增加/修改/删除。
+同时为了快速知道某个字符串属于哪个 `Node`，我们还需要开一个「哈希表」进行定位（以字符串为哈希表的键，字符串所在 `Node` 作为值），当定位到字符串对应的 `Node` 之后则可以利用双向链表的 $O(1)$ 增加/修改/删除。
 
 在双向链表中，起始只有两个哨兵节点 `hh` 和 `tt` ，当进行若干 `inc/dec` 操作后的基本形态为：
 
