--- a/LeetCode/2041-2050/2043. 简易银行系统（中等）.md
+++ b/LeetCode/2041-2050/2043. 简易银行系统（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[2043. 简易银行系统](https://leetcode-cn.com/problems/simple-bank-system/solution/by-ac_oier-9pqi/)** ，难度为 **简单**。
+这是 LeetCode 上的 **[2043. 简易银行系统](https://leetcode-cn.com/problems/simple-bank-system/solution/by-ac_oier-9pqi/)** ，难度为 **中等**。
 
 Tag : 「模拟」
 
