--- a/LeetCode/2031-2040/2039. 网络空闲的时刻（中等）.md
+++ b/LeetCode/2031-2040/2039. 网络空闲的时刻（中等）.md
@@ -118,11 +118,11 @@ class Solution {
                 d.addLast(j);
             }
         }
-        int ans = -1;
+        int ans = 0;
         for (int i = 1; i < n; i++) {
             int di = dist[i] * 2, t = patience[i];
             int cur = di <= t ? di : (di - 1) / t * t + di;
-            if (ans == -1 || cur > ans) ans = cur;
+            if (cur > ans) ans = cur;
         }
         return ans + 1;
     }
