--- a/LeetCode/2031-2040/2039. 网络空闲的时刻（中等）.md
+++ b/LeetCode/2031-2040/2039. 网络空闲的时刻（中等）.md
@@ -86,6 +86,8 @@ Tag : 「BFS」
 
 因此如果 $di <= t$，那么数据服务器不会发生重发动作，该节点活动停止时间点为 $di$；当 $di > t$，数据服务器将会发生重发动作，且最后一个数据包的发送时间为 $(di - 1) / t * t$，只有当最后一个数据包收到回复，该节点的所有活动才算停止，停止时间点为 $(di - 1) / t * t + di$。所有节点的活动停止时间点的最大值即是答案。
 
+> 一些细节：老规矩，为了避免每个样例都 `new` 大数组，我们使用 `static` 优化。使用 `static` 优化后，你甚至会收获一个稳定 $100$% 的结果 🤣
+
 代码：
 ```Java
 class Solution {
